cmake_minimum_required(VERSION 3.16)
project(Navigation)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_BUILD_TYPE Release)

if (NOT CMAKE_BUILD_TYPE)
    message("not defined Build Type:auto define it to Debug" )
    set (CMAKE_BUILD_TYPE Debug)
endif (NOT CMAKE_BUILD_TYPE)

if (CMAKE_BUILD_TYPE MATCHES "Debug" )
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g ")
elseif (CMAKE_BUILD_TYPE MATCHES "Release" )
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 ")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 ")
elseif (CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 ")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 ")
else()
    message("unkown defined Build Type:same handle with Debug" )
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g ")
endif (CMAKE_BUILD_TYPE MATCHES "Debug")

include_directories("E:\\eigen3")
include_directories("${PROJECT_SOURCE_DIR}\\include\\eskf")
include_directories("${PROJECT_SOURCE_DIR}\\include\\leskf")
include_directories("${PROJECT_SOURCE_DIR}\\include\\geskf")
include_directories("${PROJECT_SOURCE_DIR}\\include\\liekf")
include_directories("${PROJECT_SOURCE_DIR}\\include\\riekf")

aux_source_directory(${PROJECT_SOURCE_DIR}/src/eskf ESKF)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/leskf LESKF)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/geskf GESKF)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/liekf LIEKF)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/riekf RIEKF)

add_executable(Navigation main.cpp ${ESKF} ${LESKF} ${GESKF} ${LIEKF} ${RIEKF})